# Cortex_M_devEnv

./: .gitignore  README
doc/: CortexM_gnuToolchain_main.md  CortexM_gnuToolchain_tickets.md  Theory_of_debugging_with_GDB.md
doc/.obsidian/: workspace.json
doc/Projects/: information_about_projects.md
doc/Projects/RP2xxx_targets/: About the Pico-SDK.md  About_the_Pico-SDK.md  Project 1 RP2040 on Linux.md  Project 2  RP2350 with Cortex-M33 on Linux.md  Project_1_RP2040_on_Linux.md  Project_2 _RP2350_with_Cortex-M33_on_Linux.md  ThreadX_on_rp2350_cortexM33.md
doc/Projects/STM32_targets/: Project 2 STM32H7 on Windows.md  Project_1_STM32H7_on_Linux.md  Project_2_STM32H7_on_Windows.md  Project_3_STM32F4_on_Linux.md
doc/RP2xxx_targets/: About the Pico-SDK.md  Project 2  RP2350 with Cortex-M33 on Linux and Windows.md  Project 2  RP2350 with Cortex-M33 on Linux.md
doc/STM32_targets/: Project 1 STM32H7 on Linux.md  Project 3 STM32F4 on Linux.md
doc/common/: CortexM_ThreadX.md  External sources and program to install.md  Set of CMake script skeleton.md  Theory of debugging with GDB.md
doc/diagrams/: .$All_diagrams.drawio.bkp  All_diagrams.drawio
doc/feedback_opinion/: 5_My_opinion.md  troubleshooting.md
doc/setup/: how_to_setup.md
doc/setup/Linux/: CMake_setup.md  Debuggers.md  External_sources_setup.md  gnu_arm_toolchain_setup.md  openOCD_setup.md
doc/setup/Windows/: CMake_setup.md  External_sources_setup.md  gnu_arm_toolchain_setup.md  openOCD_setup.md
prj_f4/: CMakeLists.txt  cortex_m_rtos.cmake  cortex_m_toolchain.cmake  gnu_arm_toolchain.cmake  stm32_hal_srcList.cmake  stm32_threadx_srcList.cmake  stm32f4_debug.cfg  stm32h7_debug.cfg
prj_f4/app/: app_threadx.c  board.h  main.c  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32h7xx_hal_timebase_tim.c  system_stm32f4xx.c  tx_user.h
prj_f4/system/: stm32f4xx_it.c  stm32f4xx_it.h  stm32h7xx_it.c
prj_h7/: .gdbinit  .gdbinit_swo_Bmp  CMakeLists.txt  cortex_m_rtos.cmake  cortex_m_stm32_hal.cmake  cortex_m_toolchain.cmake  gnu_arm_toolchain.cmake  stm32.cmake  stm32_hal_srcList.cmake  stm32_threadx_srcList.cmake  stm32h7_debug.cfg
prj_h7/app/: app_threadx.h  board.h  main.c  stm32h7xx_hal_conf.h  stm32h7xx_hal_msp.c  system_stm32h7xx.c  tx_user.h
prj_h7/system/: stm32h7xx_it.c  stm32h7xx_it.h
prj_n6/: CMakeLists.txt  stm32_hal_srcList.cmake  stm32_threadx_srcList.cmake
prj_n6/app/: app_threadx.c  app_threadx.h  board.h  main.c  stm32n6xx_hal_msp.c  stm32n6xx_hal_timebase_tim.c  system_stm32n6xx.c  tx_user.h
prj_n6/system/: stm32n6xx_hal_conf.h  stm32n6xx_it.c  stm32n6xx_it.h
prj_rp2040/: .gdbinit  CMakeLists.txt  cortex_m_env.cmake  cortex_m_rtos.cmake  cortex_m_toolchain.cmake
prj_rp2040/app/: app_threadx.c  app_threadx.h  board.h  main.c  tx_user.h
prj_rp2040/system/: tx_initialize_low_level.S
prj_rp2350/: CMakeLists.txt  cortexM_threadx_srcList.cmake  cortex_m_env.cmake  cortex_m_rtos.cmake  cortex_m_toolchain.cmake
prj_rp2350/app/: FreeRTOSConfig.h  app_freeRtos.c  app_freeRtos.h  app_threadx.c  board.h  main.c
prj_rp2350/lib/: drv_gyroscope.c  drv_gyroscope.h  lwipopts.h  mqtt_pico2w.c  mqtt_pico2w.h
prj_rp2350/system/: tx_initialize_low_level.S
